syntax= "proto3";
package pb;
option go_package = "com.de";
import "google/api/annotations.proto";
import "validate/validate.proto";

message LoginRequest {
  string username = 1 [(validate.rules).string.email = true];
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1  [(validate.rules).string.email = true];
  string password = 2;
  string full_name = 3;
}

  service DeviceService {
    // List all registered devices
    rpc Login(LoginRequest) returns (LoginResponse) {
      option (google.api.http) = {
        post: "/api/v1/auth/login"
        body: "*"
      };
    };
    // register
    rpc Register(RegisterRequest) returns (LoginResponse) {
      option (google.api.http) = {
        post: "/api/v1/auth/register"
        body: "*"
      };
    };
  }